# neuro-sft-host

./: .env.example  .gitignore  .pre-commit-config.yaml  1_setup.sh  2_create_dataset.sh  2_create_forum_dataset.sh  2_create_pdf_dataset.sh  2_download_models.sh  2_pretrain.sh  3_build_docker.sh  3_run_local.sh  3_run_notebooks.sh  4_generate_pres.sh  CMakeLists.txt  LICENSE  README.md  cp.gbnf  create-gguf.sh  docker-compose.bot.yml  docker-compose.local.yml  docker-compose.yml  download_models.sh  neuro-sft-host.sln  nginx.conf  requirements.txt  review.txt  vllm_client.py
datasets/: convert_bb_dir_to_txt_dir.py  fix_enc.py  start_vllm.sh
docker/: docker-compose.bot.yml  docker-compose.local.yml  docker-compose.yml  frontend_appsettings.json  local.frontend_appsettings.json  local.nginx.conf  nginx.conf
docker/cert/: aspnetapp.crt  aspnetapp.key  aspnetapp.pfx
docker/services/: prometheus.yml
docker/services/nginx/: Dockerfile  nginx.conf
docker/services/telegraf/: Dockerfile  telegraf.conf
docs/: presentation.html  presentation.md
grammar/: convert.txt  cp.ebnf  cp.gbnf  ebnf_to_gbnf.py  test.cp  validate.sh
labs/: Dockerfile  docker-compose.yml  requirements.txt
labs/notebooks/: CheckForumData.ipynb  CheckVllm.ipynb  CheckVllmServer.ipynb  ClearMlExport.ipynb  eval.ipynb  pretrain.ipynb  train.ipynb
learn/: Dockerfile  docker-compose.yml
learn/notebooks/: CheckData.ipynb  ComponentPascalParser.ipynb  Convert.ipynb  Cotype-RLHF.ipynb  Cotype_SFT.ipynb  EbnfToGbnf.ipynb  ExtractPdfs.ipynb  FilesSFT.ipynb  InferCheck.ipynb  Untitled.ipynb  client.ipynb  download_pdfs.ipynb  surya.ipynb
learn/notebooks/BB/: CheckVllm.ipynb  CheckVllmServer.ipynb  CodeMark.ipynb  CodeMarkLine.ipynb  ExtractCode.ipynb  GenerateQA.ipynb  PublishDataset.ipynb  QwenTokensCheck.ipynb  eval.ipynb  merge.ipynb  parser.ipynb  pretrain.ipynb  pretrain2-QA.ipynb
learn/notebooks/BB/datasets/: CheckForumData.ipynb
ollama/: Modelfile
scripts/: build_docker.sh
scripts/datasets/: convert_bb_dir_to_txt_dir.py  convert_pdf_to_md_parser.py  convert_pdf_to_md_surja.py  convert_txt_to_md_llm.py  create_bb_dataset.sh  create_pdfs_dataset.sh  download_pdfs.py  fix_enc.py  generate-qa.py  generate_qa.py  install_deps.sh  publish.py  start_local_qa_generator.sh
scripts/grammar/: cp_doc_to_md_using_parser.py  ebnf_to_gbnf.py  validate.sh
scripts/infrastructure/: publish.sh  run-local.sh
scripts/models/: create_gguf.sh  download_gguf_models.sh  merge_lora.py  pretrain.py  setup.sh  train_qa.py
services/: prometheus.yml
services/telegraf/: Dockerfile  telegraf.conf
src/: docker-compose.local.yml  initdb.sh  run-local-db.sh
src/Llm/: .dockerignore  Llm.sln
src/Llm/Crawler/: Crawler.csproj  ICrawler.cs  IParser.cs  IWebClient.cs  OberonForumCrawler.cs  Program.cs
src/Llm/DatasetGenerator/: DatasetGenerator.csproj  Dialog.cs  IChunker.cs  IDataset.cs  IDialogGenerator.cs  Program.cs
src/Llm/LllmBackend/: Dockerfile  HealthCheck.cs  LllmBackend.csproj  LlmBackend.csproj  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
src/Llm/LllmBackend/Auth/: AppDbContext.cs  AppUser.cs  SeedData.cs
src/Llm/LllmBackend/Controllers/: WeatherForecastController.cs
src/Llm/LllmBackend/Hubs/: ChatHub.cs  ConnectionMapping.cs
src/Llm/LllmBackend/Infrastructure/: AiService.cs  ChatHubEventHandler.cs  DbEntityStorage.cs  DbViewsStorage.cs  DefaultBackgroundTaskQueue.cs  InMemoryEntityStorage.cs  Keys.cs  MetricsHost.cs  SignalrEventBus.cs  SimpleEventBus.cs
src/Llm/LllmBackend/Migrations/: 20250113111718_InitialCreate.Designer.cs  AppDbContextModelSnapshot.cs
src/Llm/LllmBackend/Properties/: launchSettings.json
src/Llm/LllmChat/: ChannelGrain.cs  ChatMsg.cs  ChatsManagerGrain.cs  Constants.cs  IChannelGrain.cs  IChatsManagerGrain.cs  IUserGrain.cs  LlmChat.csproj
src/Llm/LllmTelegramBot/: IChatService.cs  ILllmService.cs  LllmTelegramBot.csproj  Program.cs  Worker.cs
src/Llm/LlmBackend/: Dockerfile  LllmBackend.http  LlmBackend.csproj  Program.cs  WeatherForecast.cs
src/Llm/LlmBackend/.config/: dotnet-tools.json
src/Llm/LlmBackend/Auth/: AppDbContext.cs  AppUser.cs  SeedData.cs
src/Llm/LlmBackend/Controllers/: WeatherForecastController.cs
src/Llm/LlmBackend/Hubs/: ChatHub.cs
src/Llm/LlmBackend/Infrastructure/: AiService.cs  ChatHubEventHandler.cs  DbEntityStorage.cs  DbViewsStorage.cs  InMemoryEntityStorage.cs  Keys.cs
src/Llm/LlmBackend/Migrations/: 20250113111718_InitialCreate.cs  AppDbContextModelSnapshot.cs
src/Llm/LlmBackend/Properties/: launchSettings.json
src/Llm/LlmChat/: ChatMsg.cs  ChatsManagerGrain.cs  Constants.cs  IChannelGrain.cs  IUserGrain.cs  LlmChat.csproj
src/Llm/LlmCommon/: Command.cs  Entity.cs  Event.cs  Ids.cs  LlmCommon.csproj  LongRunningTask.cs  Query.cs  Unit.cs  View.cs
src/Llm/LlmCommon/Abstractions/: IChatService.cs  IChatsEventHandler.cs  IContext.cs  IEntityStorage.cs  IEventBus.cs  IEventHandler.cs  IExecutor.cs  IHandler.cs  IMetrics.cs  IRequestHandler.cs  ITaskQueue.cs  IUnitOfWork.cs  IViewStorage.cs  ViewStorage.cs
src/Llm/LlmCommon/Commands/: Chat.cs
src/Llm/LlmCommon/Dtos/: AiSettingsDto.cs  ChatDto.cs  MessageDto.cs  User.cs
src/Llm/LlmCommon/Entities/: ChatEntity.cs
src/Llm/LlmCommon/Events/: ChangedChatEvent.cs  ChangedMessageEvent.cs  ChatEvent.cs  CreatedChatEvent.cs  CreatedMessageEvent.cs  RemovedChatEvent.cs  RemovedMessageEvent.cs  UserJoinEvent.cs  UserLeaveEvent.cs
src/Llm/LlmCommon/Implementations/: AiEventHandler.cs  AiManager.cs  BroadcastStorage.cs  Excecutor.cs  Exceutor.cs  Executor.cs  GenerationsManager.cs  Registrator.cs  SimpleEventBus.cs  TaskExtensions.cs
src/Llm/LlmCommon/Queries/: AlIChatsQuery.cs  ChatQuery.cs
src/Llm/LlmCommon/Tasks/: GenerateResponseTask.cs
src/Llm/LlmCommon/Transport/: Envelope.cs  Output.cs
src/Llm/LlmFrontend/: App.razor  Dockerfile  LlmFrontend.csproj  Program.cs  _Imports.razor
src/Llm/LlmTelegramBot/: Consts.cs  Dockerfile  IChatService.cs  ILllmService.cs  LlmTelegramBot.csproj  LlmTelegramBot.sln  Program.cs  Worker.cs
(+32 files in other folders)
